--- a/offline.html
+++ b/offline.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ออฟไลน์</title>
   <style>
-    body{margin:0;min-height:100vh;display:grid;place-items:center;
-         font-family:system-ui,sans-serif;text-align:center}
-    a{display:inline-block;margin-top:12px}
+    body { margin:0; min-height:100vh; display:grid; place-items:center;
+           font-family: system-ui, sans-serif; text-align:center; }
+    a { display:inline-block; margin-top:12px; padding:8px 14px; background:#2196f3;
+        color:#fff; border-radius:8px; text-decoration:none; }
   </style>
 </head>
 <body>
