--- a/map.html
+++ b/map.html
@@ -169,9 +169,15 @@
       <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan) </option>
       <option value="https://www.google.com/maps/d/embed?mid=1DS8CSBurVMUU-px6qC-HrWu8Wa5CCj0&hl=th&ehbc=2E312F">แผนที่วิกฤตน้ำท่วม (Flood Crisis Map)</option>
     </select>
+  
+  <a href="คู่มือการใช้งาน Map ABT.pdf" target="_blank"
+   style="margin-left:10px; padding:6px 12px; Background:#2196f3; color:#fff;
+   text-decoration:none; border-radius:60px; font-weight:600;">
+	📖 คู่มือการใช้งาน
+	</a>
   </div>
 
-  <div id="map-area">
+<div id="map-area">
     <div class="map-wrap">
       <iframe id="mapFrame"
         src="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F"
