--- a/map.html
+++ b/map.html
@@ -156,6 +156,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <img src="welcome.png" alt="Welcome">
    ยินดีต้อนรับ (Welcome To Map ABT Dongtangnaw)
@@ -163,12 +164,12 @@
   </header>
   
   <!-- เวอร์ชัน + ป้ายแจ้งอัปเดต -->
-  <div id="versionTag">v1.1.4</div>
+  <div id="versionTag">v1.1.5</div>
   <button id="newBadge" title="มีเวอร์ชันใหม่ — แตะเพื่ออัปเดต">ใหม่!</button>
   <div id="toast">อัปเดตล่าสุดแล้ว</div>
 
   <div class="controls">
-	<label for="mapSelect">เลือกดูแผนที่ (Select a Map): </label>
+	<label for="mapSelect">เลือกดูแผนที่:</label>
     <select id="mapSelect">
       <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict)</option>
       <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan)</option>
