--- a/map.html
+++ b/map.html
@@ -169,7 +169,7 @@
   <div id="toast">อัปเดตล่าสุดแล้ว</div>
 
   <div class="controls">
-	<label for="mapSelect">เลือกดูแผนที่:</label>
+	<label for="mapSelect">เลือกแผนที่:</label>
     <select id="mapSelect">
       <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict)</option>
       <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan)</option>
@@ -338,4 +338,5 @@
     frame.addEventListener('load', () => { clearTimeout(firstTimeout); hideSplash(); }, { once:true });
   </script>
 </body>
+
 </html>
