--- a/map.html
+++ b/map.html
@@ -159,7 +159,7 @@
 
   <header>
     <img src="welcome.png" alt="Welcome">
-   ยินดีต้อนรับ (Welcome To Map ABT Dongtangnaw)
+     ยินดีต้อนรับ (Welcome)
     <img src="logo.png" alt="Logo">
   </header>
   
