--- a/map.html
+++ b/map.html
@@ -62,7 +62,7 @@
       transition: transform .25s, box-shadow .25s;
       overflow:hidden;
     }
-   .fab:hover{ transform: scale(1.1); box-shadow:0 10px 20px rgba(0,0,0,.35); }
+    .fab:hover{ transform: scale(1.1); box-shadow:0 10px 20px rgba(0,0,0,.35); }
 
     /* ปุ่มติดตั้ง */
     #installBtn{ bottom:88px; background: linear-gradient(135deg,#0284c7,#0ea5e9); }
@@ -92,7 +92,7 @@
     #refreshBtn.spin svg{ animation: spin 1s linear; }
     @keyframes spin{ from{transform:rotate(0)} to{transform:rotate(360deg)} }
 
-    /* ปุ่มอัปเดต (ใช้กรณีอยากให้กดอัปเดตเอง) */
+    /* ปุ่มอัปเดต */
     #updateBtn{
       display:none;
       position:fixed; bottom:160px; right:16px;
@@ -107,11 +107,12 @@
     #splash{
       position: fixed; inset: 0;
       display: grid; place-items: center;
-      background: #d0f8ce;
+      background: #d0f8ce; /*<สีหน้ารอโหลด>*/
       backdrop-filter: blur(3px);
       z-index: 10050;
       opacity: 1; 
       transition: opacity .25s ease; 
+	  
     }
     #splash.hide{ opacity: 0; pointer-events: none; }
     #splash .splash-logo{
@@ -120,70 +121,63 @@
       animation: pop .45s ease both;
     }
     #splash .splash-text{
-      margin: 0; font-weight: 600; font-size: 25px; color: #0d5302;
-      text-shadow:
-        -2px -2px 0 #fff,  2px -2px 0 #fff,
-        -2px  2px 0 #fff,  2px  2px 0 #fff,
-        -2px  0   0 #fff,  2px  0   0 #fff,
-         0   -2px 0 #fff,  0    2px 0 #fff;
-    } 
-    @keyframes pop{ from{ transform: scale(.9); opacity:.6 } to{ transform: scale(1); opacity:1 } }
-
-    /* เวอร์ชัน + ป้าย "ใหม่!" */
-    #versionTag{
-      position: fixed; top: 8px; right: 12px; z-index: 11000;
-      color: #fff; font-size: 15px; font-weight: 700; font-family: 'Kanit',sans-serif;
-      text-shadow: 0 2px 4px rgba(0,0,0,.8);
+      margin: 0; 
+	  font-weight: 600; 
+	  font-size: 25px; 
+	  color: #0d5302;
+      text-shadow: 
+	  -2px -2px 0 #fff;
+       2px -2px 0 #fff;
+	  -2px  2px 0 #fff;
+	   2px  2px 0 #fff;
+	  -2px	0	0 #fff;
+	   2px	0	0 #fff;
+	   0   -2px 0 #fff;
+	   0	2px 0 #fff;
+	   
+    }	
+    @keyframes pop{
+      from{ transform: scale(.9); opacity:.6 }
+      to  { transform: scale(1);  opacity:1 }
     }
-    #newBadge{
-      position: fixed; top: 34px; right: 12px; z-index: 11000;
-      display: none;
-      background: #ef4444; color:#fff; border: none;
-      padding: 4px 10px; border-radius: 999px; font-weight: 700; cursor: pointer;
-      box-shadow: 0 6px 16px rgba(239,68,68,.35);
-      transform-origin: center; animation: pulse 1.2s ease-in-out infinite;
-    }
-    @keyframes pulse{
-      0%,100%{ transform: scale(1);  box-shadow: 0 0 0 0 rgba(239,68,68,.45); }
-      50%    { transform: scale(1.06); box-shadow: 0 0 0 10px rgba(239,68,68,0); }
-    }
-    /* Toast หลังอัปเดตเสร็จ */
-    #toast{
-      position: fixed; bottom: 20px; right: 20px; z-index: 11000;
-      background: rgba(0,0,0,.8); color:#fff; padding:10px 14px; border-radius:10px;
-      display:none;
-    }
+	
+#versionTag {     
+	position: fixed;
+	top: 8px;
+	right: 12px;
+	color: white;
+	font-size: 15px;
+	font-weight: bold;
+	text-shadow: 2px 2px 4px rgba (0,0,0,0.8);
+	z-index: 11000;
+	font-family: 'Kanit',sans-serif;
+	}
+	
   </style>
 </head>
 <body>
-
   <header>
     <img src="welcome.png" alt="Welcome">
-     ยินดีต้อนรับ (Welcome)
+    เลือกดูแผนที่ (Select a Map)
     <img src="logo.png" alt="Logo">
   </header>
-  
-  <!-- เวอร์ชัน + ป้ายแจ้งอัปเดต -->
-  <div id="versionTag">v1.1.5</div>
-  <button id="newBadge" title="มีเวอร์ชันใหม่ — แตะเพื่ออัปเดต">ใหม่!</button>
-  <div id="toast">อัปเดตล่าสุดแล้ว</div>
-
+	<div id="versionTag">v1.1.4</div> 
   <div class="controls">
-	<label for="mapSelect">เลือกแผนที่:</label>
+    <label for="mapSelect">แผนที่:</label>
     <select id="mapSelect">
-      <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict)</option>
-      <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan)</option>
+      <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict) </option>
+      <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan) </option>
       <option value="https://www.google.com/maps/d/embed?mid=1DS8CSBurVMUU-px6qC-HrWu8Wa5CCj0&hl=th&ehbc=2E312F">แผนที่วิกฤตน้ำท่วม (Flood Crisis Map)</option>
     </select>
+	
+	<a href="คู่มือการใช้งาน Map ABT.pdf" target="_blank"
+   style="margin-left:10px; padding:6px 12px; Background:#2196f3; color:#fff;
+   text-decoration:none; border-radius:10px; font-weight:50;">
+	📖 คู่มือ
+	</a>
+</div>
 
-    <a href="คู่มือการใช้งาน Map ABT.pdf" target="_blank"
-       style="margin-left:10px; padding:6px 12px; background:#2196f3; color:#fff;
-              text-decoration:none; border-radius:10px; font-weight:500;">
-      📖 คู่มือ
-    </a>
-  </div>
-
-  <div id="map-area">
+<div id="map-area">
     <div class="map-wrap">
       <iframe id="mapFrame"
         src="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F"
@@ -192,7 +186,7 @@
     </div>
   </div>
 
-  <!-- FAB -->
+  <!-- FAB ปุ่ม -->
   <button id="installBtn" class="fab" title="ติดตั้งแอป">
     <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
@@ -273,57 +267,30 @@
       updateInstallBtn();
     });
 
-    /* SW Update + ป้าย "ใหม่!" */
+    /* SW Update */
     const updateBtn = document.getElementById('updateBtn');
-    const newBadge = document.getElementById('newBadge');
-    const toast = document.getElementById('toast');
     let newWorker;
-
-    function showToast(msg){
-      toast.textContent = msg;
-      toast.style.display = 'block';
-      setTimeout(()=> toast.style.display='none', 3000);
-    }
-
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', async () => {
         try {
           const reg = await navigator.serviceWorker.register('./sw.js');
           reg.update();
           setInterval(() => reg.update(), 15*60*1000);
-
-          // เจอ SW ใหม่ -> โชว์ป้าย "ใหม่!"
           reg.addEventListener('updatefound', () => {
             newWorker = reg.installing;
             newWorker?.addEventListener('statechange', () => {
               if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
                 updateBtn.style.display = 'block';
-                newBadge.style.display = 'inline-block';   // <<< โชว์ป้ายใหม่!
               }
             });
           });
-
-          // SW ใหม่เข้าควบคุม -> รีโหลด และแจ้งว่าอัปเดตแล้ว
-          navigator.serviceWorker.addEventListener('controllerchange', () => {
-            sessionStorage.setItem('abt_just_updated','1');
-            location.reload();
-          });
-
-          // ถ้าเพิ่งอัปเดตมา ให้ขึ้น toast
-          if (sessionStorage.getItem('abt_just_updated') === '1') {
-            sessionStorage.removeItem('abt_just_updated');
-            showToast('อัปเดตล่าสุดแล้ว');
-          }
+          navigator.serviceWorker.addEventListener('controllerchange', () => location.reload());
         } catch (e) { console.warn('SW register failed', e); }
       });
     }
-
-    // กดป้าย "ใหม่!" หรือปุ่มอัปเดต -> skip waiting
-    function requestSkipWaiting(){
+    updateBtn.addEventListener('click', () => {
       if (newWorker) newWorker.postMessage({ action: 'SKIP_WAITING' });
-    }
-    updateBtn.addEventListener('click', requestSkipWaiting);
-    newBadge.addEventListener('click', requestSkipWaiting);
+    });
 
     /* Splash helpers */
     const splash = document.getElementById('splash');
@@ -336,6 +303,8 @@
     showSplash();
     const firstTimeout = setTimeout(hideSplash, 2000);
     frame.addEventListener('load', () => { clearTimeout(firstTimeout); hideSplash(); }, { once:true });
-  </script>
+    </script>
 </body>
 </html>
+
+
