--- a/map.html
+++ b/map.html
@@ -158,7 +158,7 @@
 <body>
   <header>
     <img src="welcome.png" alt="Welcome">
-    เลือกดูแผนที่ (Select a Map)
+    ยินดีต้อนรับ (Welcome)
     <img src="logo.png" alt="Logo">
   </header>
 	<div id="versionTag">v1.1.4</div> 
