--- a/map.html
+++ b/map.html
@@ -14,14 +14,14 @@
     html, body { height:100%; margin:0; font-family:'Kanit', sans-serif; overflow:hidden; }
 
     body{
-      background: url('Background.png') no-repeat center center fixed;
+      background: url('Backgroundตุลาคม.png') no-repeat center center fixed;
       background-size: cover;
       display:flex; flex-direction:column;
     }
 
-    header{
+    header{ 
       display:flex; align-items:center; justify-content:center; gap:12px;
-      background: rgba(0,100,0,.75); color:#fff; padding:8px;
+      background: #2196F3; color:#fff; padding:8px;
       font-size:20px; font-weight:600; text-align:center;
       backdrop-filter: blur(3px); border-radius:8px; margin:8px;
     }
@@ -29,7 +29,7 @@
 
     .controls{
       display:flex; gap:8px; align-items:center; justify-content:center;
-      padding:10px; margin:0 8px 8px;
+      padding:10px; margin:0px 8px 8px;
       background: rgba(255,255,255,.85); backdrop-filter: blur(3px);
       box-shadow:0 1px 6px rgba(0,0,0,.12); border-radius:10px;
     }
@@ -107,7 +107,7 @@
     #splash{
       position: fixed; inset: 0;
       display: grid; place-items: center;
-      background: #d0f8ce; /*<สีหน้ารอโหลด>*/
+      background: #b2ebf2; /*<สีหน้ารอโหลด>*/
       backdrop-filter: blur(3px);
       z-index: 10050;
       opacity: 1; 
@@ -124,7 +124,7 @@
       margin: 0; 
 	  font-weight: 600; 
 	  font-size: 25px; 
-	  color: #0d5302;
+	  color: #006064;
       text-shadow: 
 	  -2px -2px 0 #fff;
        2px -2px 0 #fff;
@@ -141,16 +141,16 @@
       to  { transform: scale(1);  opacity:1 }
     }
 	
-#versionTag {     
-	position: fixed;
-	top: 8px;
-	right: 12px;
-	color: white;
-	font-size: 15px;
-	font-weight: bold;
-	text-shadow: 2px 2px 4px rgba (0,0,0,0.8);
-	z-index: 11000;
-	font-family: 'Kanit',sans-serif;
+	#versionTag {     
+	 position: fixed;
+	 top: 8px;
+	 right: 12px;
+	 color: white;
+	 font-size: 15px;
+	 font-weight: bold;
+	 text-shadow: 2px 2px 4px rgba (0,0,0,0.8);
+	 z-index: 11000;
+	 font-family: 'Kanit',sans-serif;
 	}
 	
   </style>
@@ -162,7 +162,7 @@
     <img src="logo.png" alt="Logo">
   </header>
 	<div id="versionTag">v1.1.4</div> 
-  <div class="controls">
+    <div class="controls">
     <label for="mapSelect">แผนที่:</label>
     <select id="mapSelect">
       <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict) </option>
@@ -185,6 +185,8 @@
       <div class="overlay-top-right" title="ปิดการกดปุ่มของ My Maps"></div>
     </div>
   </div>
+  
+	<div id="clock"></div>
 
   <!-- FAB ปุ่ม -->
   <button id="installBtn" class="fab" title="ติดตั้งแอป">
@@ -304,7 +306,6 @@
     const firstTimeout = setTimeout(hideSplash, 2000);
     frame.addEventListener('load', () => { clearTimeout(firstTimeout); hideSplash(); }, { once:true });
     </script>
+	
 </body>
 </html>
-
-
