--- a/map.html
+++ b/map.html
@@ -336,7 +336,7 @@
     });
 
     // เพิ่ม "68" ต่อท้ายเดือน
-    const date = dateStr + " 68";
+    const date = dateStr + " 68 เวลา";
 
     // แปลงเวลาเป็น HH:MM:SS
     const hh = String(now.getHours()).padStart(2, '0');
